[tool.poetry]
name = "lme-forecast-ml"
version = "0.1.0"
description = ""
authors = ["Rafael Sales <rafael.sales@gmail.com>"]
readme = "README.md"
packages = [{include = "lme_forecast_ml"}]

[tool.poetry.dependencies]
python = "3.11.4"
jupyterlab = "^4.0.5"
pandas = "^2.0.3"
prophet = "^1.1.4"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
